--- a/AMH-v3/.classpath
+++ b/AMH-v3/.classpath
@@ -13,5 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Users/HP/eclipse-workspace/AssetManagementSystemNew/WebContent/WEB-INF/lib/org.springframework.web.portlet-3.0.0.RELEASE.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
